# ResearchProjectTemplate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
knowledge/: workflows.tex
