[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-project-template"
version = "0.1.0"
description = "Template Python project for tested, reproducible, and usable research workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Lukas" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "coverage[toml]>=7.0,<8",
  "ruff>=0.6,<1",
  "mypy>=1.8,<2"
]

[project.scripts]
research-template = "research_project_template.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["research_project_template"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src"]
